--- a/src/Server/config.json
+++ b/src/Server/config.json
@@ -1,4 +1,4 @@
 {
-    "serverAPIip": "http://119.29.195.22:8888",
-    "serverWSip": "ws://119.29.195.22:8888"
+    "serverAPIip": "https://api.rekgame.top",
+    "serverWSip": "wss://api.rekgame.top"
 }
